# docs/swagger.yaml
@@ -124,23 +124,6 @@ paths:
       tags:
       - users
   /users/{id}:
-    delete:
-      parameters:
-      - description: User ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.User'
-      summary: Deletes user based on given ID
-      tags:
-      - users
     get:
       parameters:
       - description: User ID
@@ -156,32 +139,6 @@ paths:
           schema:
             $ref: '#/definitions/models.User'
       summary: Retrieves user based on given ID
-      tags:
-      - users
-    put:
-      consumes:
-      - application/json
-      description: Update a user
-      parameters:
-      - description: User ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      - description: Update user
-        in: body
-        name: user
-        required: true
-        schema:
-          $ref: '#/definitions/models.RequestUserDto'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.User'
-      summary: Update a  user based on given ID
       tags:
       - users
   /users/{id}/consultations:
